--- a/trunk/rj-pos/application.properties
+++ b/trunk/rj-pos/application.properties
@@ -1,6 +1,7 @@
 #Grails Metadata file
-#Thu Nov 15 14:20:00 GMT+08:00 2012
+#Fri Nov 23 15:46:27 GMT+08:00 2012
 app.grails.version=2.1.1
 app.name=project
 app.version=0.1
+plugins.calendar=1.2.1
 plugins.jasper=1.6.1
